updated lombok for java 21